# paillier-libraries-benchmarks

./: README-Dinghy.md  README-GCE.md  README.md
c-libpaillier/: README.md  bench.c  bench.sh
c-libpaillier-optimised/: .gitignore  README.md  bench.c
c-libpaillier/libpaillier-0.8/: AUTHORS  NEWS
c/libpaillier-0.8/: INSTALL  Makefile.in  README  aclocal.m4  configure  configure.ac  test.c
c/libpaillier-0.8/m4/: gmp.m4
go-go-gadget-paillier/: README.md  example_test.go  paillier_test.go
java-javallier/: README.md
java-javallier/src/main/java/ai/snips/: Decrypt.java  Encrypt.java  Ops.java
java/runme/src/main/scala/: runme.scala
jmh-javallier/: README.md  pom.xml
jmh-javallier/src/main/java/ai/snips/: Keygen.java  Ops.java
julia-paillier/: paillier.jl  test.jl
julia-sketch/: README.md  addition.jl  decryption.jl  encryption.jl  paillier.jl  plaintexts.jl  primes.jl  test.jl
python-paillier/: .gitignore  README.md  addition.py  decryption.py  encryption.py  keygen.py  runme.py
python-phe/: README.md  addition.py  decryption.py  encryption.py  keygen.py  runme.py
rust/: Cargo.toml  README.md
rust-paillier/: README.md
rust-paillier-gmp/: Cargo.toml  README.md
rust-paillier-gmp/benches/: addition.rs  constants.rs  decryption.rs  encryption.rs
rust-paillier-ramp/: Cargo.toml  README.md
rust-paillier-ramp/benches/: addition.rs  encryption.rs  keygen.rs
rust/benches/: addition.rs  keygen.rs  runme.rs
